--- a/studying_html.css
+++ b/studying_html.css
@@ -1,3 +1,51 @@
+/* fonts */
+@font-face {
+    font-family: 'Spoqa Han Sans Neo';
+    font-weight: 700;
+    src: local('Spoqa Han Sans'),
+    url('../../fonts/SpoqaHanSansNeo_TTF_subset/SpoqaHanSansNeo-Bold.woff2')format('woff2'),
+    url('../../fonts/SpoqaHanSansNeo_TTF_subset/SpoqaHanSansNeo-Bold.woff')format('woff'),
+    url(../../fonts/SpoqaHanSansNeo_TTF_subset/SpoqaHanSansNeo-Bold.ttf)format('truetype');
+}
+
+@font-face {
+    font-family: 'Spoqa Han Sans Neo';
+    src: local('Spoqa Han Sans'),
+    url(../../fonts/SpoqaHanSansNeo_TTF_subset/SpoqaHanSansNeo-Regular.woff2)format('woff2'),
+    url(../../fonts/SpoqaHanSansNeo_TTF_subset/SpoqaHanSansNeo-Regular.woff)format('woff'),
+    url(../../fonts/SpoqaHanSansNeo_TTF_subset/SpoqaHanSansNeo-Regular.ttf)format('truetype');
+}
+
+body{
+    font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+}
+
+/* 글자 크기 */
+.main-title{
+    font-weight: bolder;
+    font-size: 30px;
+}
+
+.index{
+    margin-top: 10px;
+    margin-left: 10px;
+    font-size: 25px;
+}
+
+.subtitle{
+    margin:0;
+    padding-bottom: 5px;
+}
+
+h3{
+    margin: 0;
+}
+
+.text{
+    padding-top: 10px;
+}
+
+
 /* 8. 테이블 요소 */
 /* table solid */
 th, td{
@@ -9,37 +57,31 @@ table{
     width: 100%;
 }
 
-h3{
-    margin: 0;
-}
-
 ul, ol{
     padding-left: 30px;
     margin: 0;
 }
 
-.ex-box{
-    margin-bottom: 10px;
-}
 
-.text{
-    padding-top: 10px;
-}
 
+/* boxes */
 .main{
     margin: 3px;
-    padding: 10px;
     border: 3px solid darkblue;
 }
 
-.subtitle{
-    margin:0;
-    padding-bottom: 5px;
-    
+.before{
+    padding: 10px;
+    border-bottom: 3px solid lightblue;
+    margin-bottom: 10px;
+}
+
+.ex-box{
+    margin: 10px;
 }
 
 .group{
-    margin-top: 10px;
+    margin: 10px;
     padding: 5px;
     border: 2px solid lightgray;
 }
